# virtual-mcp-server

./: .gitignore  README.md  pyproject.toml  requirements.txt  sample-config.json
gateway/: __init__.py  clients.py  config.py  models.py  registry.py  semantic.py  server.py
tests/: test_end_to_end.py  test_session_disclosure.py
tests/fixtures/: downstream_mcp_server.py
tickets/: header-rules.md  initialization-params.md
